[gd_scene load_steps=2 format=3 uid="uid://d3tfxmryd30cl"]

[ext_resource type="Script" uid="uid://dsy8dnqv77moj" path="res://Mods/Keybinds/Resources/ActionUI.gd" id="1_kpyqj"]

[node name="ActionUi" type="Control"]
custom_minimum_size = Vector2(230, 165)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kpyqj")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 225.0
offset_bottom = 159.0

[node name="VBox" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBox"]
layout_mode = 2
text = "Action Name"

[node name="ActionNameTxt" type="LineEdit" parent="Panel/VBoxContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox2" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBox2"]
layout_mode = 2
text = "Keybind"

[node name="KeybindDisplay" type="LineEdit" parent="Panel/VBoxContainer/VBox2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Empty"
alignment = 1
editable = false

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SetBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
text = "Set"

[node name="ResetBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Reset"

[node name="DeleteBtn" type="Button" parent="Panel/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Delete"

[connection signal="text_changed" from="Panel/VBoxContainer/VBox/ActionNameTxt" to="." method="_on_action_name_txt_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer3/SetBtn" to="." method="_on_set_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer3/ResetBtn" to="." method="_on_reset_btn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer3/DeleteBtn" to="." method="_on_delete_btn_pressed"]
